--- a/vignettes/kanpsack-vignette.Rmd
+++ b/vignettes/kanpsack-vignette.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "kanpsack-vignette"
+title: "knapsack-vignette"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{kanpsack-vignette}
@@ -20,8 +20,7 @@ library(microbenchmark)
 ```
 
 
-This package we will create 3 algorithms to the knapsack problem with different computional
-complexity and how to speedup R code. The goal is to find the knapsack with the largest value of the elements added to the knapsack.
+This package we will create 3 algorithms to the knapsack problem with different computional complexity and how to speedup R code. The goal is to find the knapsack with the largest value of the elements added to the knapsack.
 
 # Set up
 ```{r, include = TRUE}
