--- a/vignettes/kanpsack-vignette.Rmd
+++ b/vignettes/kanpsack-vignette.Rmd
@@ -50,5 +50,19 @@ microbenchmark(greedy_knapsack(x = knapsack_objects[1:8,], W = 3500))
 # knapsack_dynamic
 ```{r, include = TRUE}
 knapsack_dynamic(x = knapsack_objects[1:8,], W = 3500)
-microbenchmark(knapsack_dynamic(x = knapsack_objects[1:8,], W = 3500))
+microbenchmark(knapsack_dynamic(x = knapsack_objects[1:8,], W = 3500, fast=FALSE))
 ```
+
+
+# Rcpp test
+```{r, include = TRUE}
+# With Rccp speed
+system.time(knapsack_dynamic(x = knapsack_objects[1:100,], W = 3500, fast=TRUE))
+
+
+# Normal speed
+system.time(knapsack_dynamic(x = knapsack_objects[1:100,], W = 3500, fast=FALSE))
+
+
+```
+
